fix latex errors

--- a/README.ipynb
+++ b/README.ipynb
@@ -78,11 +78,10 @@
     "$$ P = \\sqrt{1-\\frac{B^2}{AC}}. $$\n",
     "\n",
     "Define:\n",
-    "\\begin{align*}\n",
-    "A & = \\frac{1+\\mu^2}{2(1-\\mu^2)} \\alpha_1^2 \\\\\n",
-    "B & = \\frac{\\mu}{1-\\mu^2} \\alpha_1\\alpha_2 \\\\\n",
-    "C & = \\frac{1+\\mu^2}{2(1-\\mu^2)} \\alpha_2^2 \\\\\n",
-    "\\end{align*}\n",
+    "\n",
+    "$$ A = \\frac{1+\\mu^2}{2(1-\\mu^2)} \\alpha_1^2 $$\n",
+    "$$ B = \\frac{\\mu}{1-\\mu^2} \\alpha_1\\alpha_2 $$\n",
+    "$$ C = \\frac{1+\\mu^2}{2(1-\\mu^2)} \\alpha_2^2 $$\n",
     "\n",
     "Then $f$ has the following Schmidt decomposition [[ref]](https://arxiv.org/abs/quant-ph/0305192):\n",
     "\n",
@@ -98,19 +97,20 @@
     "\n",
     "<!-- $H_0(x)=1$, $H_1(x)=2x$, $H_2(x)=4x^2-2$, $H_3(x)=8x^3-12x$, $H_4(x)=16x^4-48x^2+12$, ... -->\n",
     "\n",
-    "\\begin{align*}\n",
-    "H_0(x) & = 1 \\\\\n",
-    "H_1(x) & = 2x \\\\\n",
-    "H_2(x) & = 4x^2 - 2 \\\\\n",
-    "H_3(x) & = 8x^3 - 12x \\\\\n",
-    "H_4(x) & = 16x^4 - 48x^2 + 12\n",
-    "\\end{align*}\n",
+    "$$ H_0(x) = 1 $$\n",
+    "$$ H_1(x) = 2x $$\n",
+    "$$ H_2(x) = 4x^2 - 2 $$\n",
+    "$$ H_3(x) = 8x^3 - 12x $$\n",
     "\n",
     "Furthermore, the Schmidt number K and purity P are\n",
     "\n",
     "$$ P = \\frac{1}{K} = \\frac{1-\\mu^2}{1+\\mu^2}. $$\n",
     "\n",
-    "Observe that the quantity $1 - \\frac{B^2}{AC} = \\left( \\frac{1-\\mu^2}{1+\\mu^2} \\right)^2 = P^2 $ so the purity in terms of $A$, $B$, $C$ is:\n",
+    "Observe that the quantity\n",
+    "\n",
+    "$$ 1 - \\frac{B^2}{AC} = \\left( \\frac{1-\\mu^2}{1+\\mu^2} \\right)^2 = P^2 $$\n",
+    "\n",
+    "so the purity in terms of $A$, $B$, $C$ is:\n",
     "\n",
     "$$ P = \\sqrt{1-\\frac{B^2}{AC}} $$\n",
     "\n",
@@ -164,24 +164,29 @@
     "$$ C = p+q\\cos^2\\theta $$\n",
     "\n",
     "Also defining $r ≡ p/q$, the purity is\n",
+    "\n",
     "$$ P = \\sqrt{1 - \\frac{B^2}{AC}} = \\sqrt{1 - \\frac{(r+\\sin\\theta\\cos\\theta)^2}{(r+\\sin^2\\theta)(r+\\cos^2\\theta)}} $$\n",
     "\n",
     "We can observe that unit purity is obtained when θ<0 and $|r=\\sin\\theta\\cos\\theta|$. For θ>0 we find that $\\frac{d}{dr}P=0$ when $r=\\sin\\theta\\cos\\theta$. So in both cases we obtain maximum purity when\n",
+    "\n",
     "$$ r = \\frac{p}{q} = |\\sin\\theta\\cos\\theta|  = \\left|\\frac{1}{2}\\sin2\\theta\\right|. $$\n",
     "\n",
     "And the maximum purity obtained is\n",
     "\n",
+    "$$ P = 1 \\text{ if } -\\frac{\\pi}{2} < \\theta < 0 $$\n",
+    "$$ P = \\left|\\frac{1-\\tan\\theta}{1+\\tan\\theta}\\right| \\text{ if } 0 < \\theta < \\frac{\\pi}{2} $$\n",
+    "\n",
+    "<!-- \n",
     "$$\n",
     "P =\n",
     "\\left\\{\n",
     "\\begin{aligned}\n",
-    "& \\phantom{xxxx} 1 \\phantom{xxxx} & \\text{if}& & -\\frac{\\pi}{2} < \\theta < 0 \\\\\n",
+    "&  1  & \\text{if}& & -\\frac{\\pi}{2} < \\theta < 0 \\\\\n",
     "&\\left|\\frac{1-\\tan\\theta}{1+\\tan\\theta}\\right| & \\text{if}& & 0 < \\theta < \\frac{\\pi}{2}\n",
     "\\end{aligned}\n",
     "\\right.\n",
     "$$\n",
-    "\n",
-    "\n"
+    "-->"
    ]
   },
   {
@@ -279,7 +284,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python3.10"
+   "name": "python3"
   },
   "language_info": {
    "name": "python",
