--- a/README.ipynb
+++ b/README.ipynb
@@ -157,6 +157,7 @@
     "$$ f_\\mathrm{JSA}(x,y) = e^{-(p+q\\sin^2\\theta)x^2} e^{-2(p+q\\sin\\theta\\cos\\theta)xy} e^{-(p+q\\cos^2\\theta)y^2}$$\n",
     "\n",
     "Define:\n",
+    "\n",
     "$$ A = p+q\\sin^2\\theta $$\n",
     "\n",
     "$$ B = -(p+q\\sin\\theta\\cos\\theta) $$\n",
@@ -287,7 +288,15 @@
    "name": "python3.10"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   }
  },
