--- a/README.ipynb
+++ b/README.ipynb
@@ -244,7 +244,7 @@
     "\n",
     "Therefore\n",
     "\n",
-    "$$ h(x,z) = \\exp{\\left( -(A-\\tfrac{B^2}{C+D}) x^2 \\right)}\n",
+    "$$ h(x,z) = \\sqrt{\\tfrac{\\pi}{C+D}} \\exp{\\left( -(A-\\tfrac{B^2}{C+D}) x^2 \\right)}\n",
     "            \\exp{\\left( +2(\\tfrac{BE}{C+D}) xz \\right)} \n",
     "            \\exp{\\left( -(F-\\tfrac{E^2}{C+D}) z^2 \\right)} $$\n",
     "\n",
@@ -291,7 +291,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python3.10"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
