--- a/README.ipynb
+++ b/README.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "$$ H_3(x) = 8x^3 - 12x $$\n",
     "\n",
-    "Furthermore, the Schmidt number K and purity P are\n",
+    "Furthermore, the Schmidt number $K$ and purity $P$ are\n",
     "\n",
     "$$ P = \\frac{1}{K} = \\frac{1-\\mu^2}{1+\\mu^2}. $$\n",
     "\n",
@@ -173,7 +173,7 @@
     "\n",
     "$$ P = \\sqrt{1 - \\frac{B^2}{AC}} = \\sqrt{1 - \\frac{(r+\\sin\\theta\\cos\\theta)^2}{(r+\\sin^2\\theta)(r+\\cos^2\\theta)}} $$\n",
     "\n",
-    "We can observe that unit purity is obtained when θ<0 and $r=|\\sin\\theta\\cos\\theta|$. For θ>0 we find that $\\frac{d}{dr}P=0$ when $r=\\sin\\theta\\cos\\theta$. So in both cases we obtain maximum purity when\n",
+    "We can observe that unit purity is obtained when $θ<0$ and $r=|\\sin\\theta\\cos\\theta|$. For $θ>0$ we find that $\\frac{d}{dr}P=0$ when $r=\\sin\\theta\\cos\\theta$. So in both cases we obtain maximum purity when\n",
     "\n",
     "$$ r = \\frac{p}{q} = |\\sin\\theta\\cos\\theta|  = \\left|\\frac{1}{2}\\sin2\\theta\\right|. $$\n",
     "\n",
